Metadata/objects/Quote_Product__c.object
<CustomObject>
    <customHelpPage>support</customHelpPage>
    <description>The tier 1 of the product catalog linked to the Quote.</description>
    <fields>
        <fullName>Bundle_SequenceNumber__c</fullName>
        <label>Bundle Sequence Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Bundle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Bundle</label>
        <referenceTo>Product_Bundle__c</referenceTo>
        <relationshipLabel>Quote Product</relationshipLabel>
        <relationshipName>Product_Bundle</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <externalId>true</externalId>
        <label>Product Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice IT Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Quote Products</relationshipLabel>
        <relationshipName>Quote_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote</label>
        <referenceTo>Quote__c</referenceTo>
        <relationshipLabel>Quote Products</relationshipLabel>
        <relationshipName>Quote_Product</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Renewed_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewed From</label>
        <referenceTo>Job_Product__c</referenceTo>
        <relationshipLabel>Quote Product</relationshipLabel>
        <relationshipName>Quote_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SequenceNumber__c</fullName>
        <label>Quote Product Sequence Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Quote_Rate_Plans__c</fullName>
        <label>Total Quote Rate Plans</label>
        <summaryForeignKey>Quote_Rate_Plan__c.Quote_Product__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Quote Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Product</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>